working on environmental mapping, tex2D not working for some reason

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,7 @@
 *.vcxproj
 *.xcodeproj
 build
-
+*/hdri
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
 ### Linux ###
@@ -23,7 +23,8 @@ build
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
