Pathtracer partially works, but I want to rework material class

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,8 @@
 *.xcodeproj
 build
 
+.vscode
+
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
 ### Linux ###
@@ -23,7 +25,8 @@ build
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
