--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 *.vcxproj
 *.xcodeproj
 build
+scenes/env_maps
 
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
@@ -23,7 +24,8 @@ build
 .LSOverride
 
 # Icon must end with two \r
-Icon
+Icon
+
 
 # Thumbnails
 ._*
