--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,7 +67,7 @@ set(OIDN_LIBRARIES
 set(OIDN_DEST_DIR "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
 
 # Add a custom command to copy the OIDN libraries
-foreach(OIDN_LIB ${OIDN_LIBS})
+foreach(OIDN_LIB ${OIDN_LIBRARIES})
     get_filename_component(OIDN_LIB_NAME ${OIDN_LIB} NAME)
     add_custom_command(
         OUTPUT "${OIDN_DEST_DIR}/${OIDN_LIB_NAME}"
@@ -155,7 +155,8 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
     ${OIDN_LIBRARIES}
     cudadevrt
     #stream_compaction  # TODO: uncomment if using your stream compaction
-    )
+)
+
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Debug,RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo;-src-in-ptx>;--extended-lambda")
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
