Don't denoise in debug mode (only have release libs for OIDN)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,7 +53,7 @@ include_directories(${GLM_INCLUDE_DIRS})
 # Include OIDN headers
 include_directories("${CMAKE_SOURCE_DIR}/external/include/OpenImageDenoise")
 
-# Set OIDN libraries
+# Define OIDN libraries
 set(OIDN_LIBRARIES
     "${CMAKE_SOURCE_DIR}/external/lib/OpenImageDenoise.lib"
     "${CMAKE_SOURCE_DIR}/external/lib/OpenImageDenoise_core.lib"
@@ -150,15 +150,22 @@ elseif(CMAKE_VERSION VERSION_LESS "3.24.0")
 else()
     set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES CUDA_ARCHITECTURES native)
 endif()
+
+# Link OIDN libraries only in Release mode
 target_link_libraries(${CMAKE_PROJECT_NAME}
     ${LIBRARIES}
-    ${OIDN_LIBRARIES}
     cudadevrt
+    $<$<CONFIG:Release>:${OIDN_LIBRARIES}>
     #stream_compaction  # TODO: uncomment if using your stream compaction
+)
+
+# Add dependencies for copying OIDN libraries only in Release mode
+add_custom_command(TARGET ${CMAKE_PROJECT_NAME} POST_BUILD
+    COMMAND ${CMAKE_COMMAND} -E echo "Copying OIDN libraries..."
+    COMMAND ${CMAKE_COMMAND} -E copy_if_different $<$<CONFIG:Release>:${OIDN_LIBRARIES}> ${OIDN_DEST_DIR}
+    COMMENT "Copying OIDN libraries in Release mode"
 )
 
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Debug,RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo;-src-in-ptx>;--extended-lambda")
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
-
-add_dependencies(${CMAKE_PROJECT_NAME} copy_oidn_libs)
