DoF implemented; imgui support for DoF controls and re-render added
USE_BVH changed from bool to flag; samplers separated to header and code file

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,6 +72,7 @@ set(sources
     src/bvh.cpp
     src/stb.cpp
     src/image.cpp
+    src/samplers.cu
     src/glslUtility.cpp
     src/pathtrace.cu
     src/intersections.cu
