Direct lighting + Refactor to allow access of scene data from GUI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -56,6 +56,7 @@ set(headers
     src/interactions.h
     src/intersections.h
     src/glslUtility.hpp
+    src/guiDataContainer.h
     src/pathtrace.h
     src/scene.h
     src/sceneStructs.h
@@ -68,6 +69,7 @@ set(sources
     src/stb.cpp
     src/image.cpp
     src/glslUtility.cpp
+    src/guiDataContainer.cpp
     src/pathtrace.cu
     src/intersections.cu
     src/interactions.cu
