implement mis for environment light

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 *.xcodeproj
 build
 scenes/env_maps
+scenes/objs
 
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
