Restartable (resumable) path tracing implemented

--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@ build
 
 .vscode
 
+SaveFileImage.txt
+SaveFileIterSceneRenderGUI.txt
+SaveFileTextures.txt
+
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
 ### Linux ###
