--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,9 @@
 {
     "files.associations": {
         "cstdlib": "cpp",
-        "filesystem": "cpp"
+        "filesystem": "cpp",
+        "vector": "cpp",
+        "xstring": "cpp",
+        "iostream": "cpp"
     }
 }
