--- a/.gitignore
+++ b/.gitignore
@@ -5,12 +5,6 @@
 *.xcodeproj
 build
 
-.vscode
-
-SaveFileImage.txt
-SaveFileIterSceneRenderGUI.txt
-SaveFileTextures.txt
-
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
 ### Linux ###
@@ -565,3 +559,16 @@ xcuserdata
 *.xccheckout
 *.moved-aside
 *.xcuserstate
+
+# Added configs
+.vscode
+
+SaveFileImage.txt
+SaveFileIterSceneRenderGUI.txt
+SaveFileTextures.txt
+
+!OpenImageDenoise.dll
+!OpenImageDenoise.lib
+!OpenImageDenoise_core.dll
+!OpenImageDenoise_core.lib
+!OpenImageDenoise_device_cuda.dll
