create bvh files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ set(headers
     src/preview.h
     src/utilities.h
     src/tiny_obj_loader.h
+    src/bvh.h
 )
 
 set(sources
@@ -76,6 +77,7 @@ set(sources
     src/preview.cpp
     src/utilities.cpp
     src/tiny_obj_loader.cc
+    src/bvh.cpp
 )
 
 set(imgui_headers
