--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 build
 scenes/env_maps
 scenes/objs
+scenes/gltfs
 
 # Created by https://www.gitignore.io/api/linux,osx,sublimetext,windows,jetbrains,vim,emacs,cmake,c++,cuda,visualstudio,webstorm,eclipse,xcode
 
