--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -50,6 +50,12 @@ set(GLM_ROOT_DIR "${CMAKE_SOURCE_DIR}/external")
 find_package(GLM REQUIRED)
 include_directories(${GLM_INCLUDE_DIRS})
 
+find_package(OpenImageDenoise REQUIRED
+    HINTS "C:/Users/cloga/LocalData/CIS565/oidn"
+)
+include_directories(${OpenImageDenoise_INCLUDE_DIRS})
+
+
 set(headers
     src/main.h
     src/image.h
@@ -124,7 +130,9 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
     ${LIBRARIES}
     cudadevrt
     #stream_compaction  # TODO: uncomment if using your stream compaction
+    OpenImageDenoise
     )
+# target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OpenImageDenoise)
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Debug,RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo;-src-in-ptx>")
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
