Implement arbitrary triangular glTF mesh loading via tinygltf. No support for textures or bounding volume optimization yet.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,7 @@ find_package(OpenImageDenoise REQUIRED
 )
 include_directories(${OpenImageDenoise_INCLUDE_DIRS})
 
+#add_definitions(-DTINYGLTF_IMPLEMENTATION -DSTB_IMAGE_IMPLEMENTATION -DSTB_IMAGE_WRITE_IMPLEMENTATION)
 
 set(headers
     src/main.h
@@ -67,6 +68,7 @@ set(headers
     src/sceneStructs.h
     src/preview.h
     src/utilities.h
+    src/glTFLoader.h
 )
 
 set(sources
@@ -80,6 +82,7 @@ set(sources
     src/scene.cpp
     src/preview.cpp
     src/utilities.cpp
+    src/glTFLoader.cpp
 )
 
 set(imgui_headers
@@ -133,6 +136,7 @@ target_link_libraries(${CMAKE_PROJECT_NAME}
     OpenImageDenoise
     )
 # target_link_libraries(${CMAKE_PROJECT_NAME} PRIVATE OpenImageDenoise)
+target_include_directories(${PROJECT_NAME} PRIVATE ${CMAKE_SOURCE_DIR}/external/include)
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Debug,RelWithDebInfo>,$<COMPILE_LANGUAGE:CUDA>>:-G;-src-in-ptx>")
 target_compile_options(${CMAKE_PROJECT_NAME} PRIVATE "$<$<AND:$<CONFIG:Release>,$<COMPILE_LANGUAGE:CUDA>>:-lineinfo;-src-in-ptx>")
 set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT ${CMAKE_PROJECT_NAME})
