--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -77,6 +77,7 @@
         "regex": "cpp",
         "future": "cpp",
         "span": "cpp",
-        "__bit_reference": "cpp"
+        "__bit_reference": "cpp",
+        "__config": "cpp"
     }
 }
