--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -78,6 +78,13 @@
         "future": "cpp",
         "span": "cpp",
         "__bit_reference": "cpp",
-        "__config": "cpp"
+        "__config": "cpp",
+        "shared_mutex": "cpp",
+        "__nullptr": "cpp",
+        "__hash_table": "cpp",
+        "__split_buffer": "cpp",
+        "__tree": "cpp",
+        "queue": "cpp",
+        "stack": "cpp"
     }
 }
