--- a/build2/imgui.ini
+++ b/build2/imgui.ini
@@ -4,7 +4,40 @@ Size=400,400
 Collapsed=0
 
 [Window][Path Tracer Analytics]
-Pos=60,60
-Size=339,65
+Pos=564,659
+Size=382,288
 Collapsed=0
+
+[Window][Choose a JSON File##ChooseFileDlgKey]
+Pos=-2,89
+Size=1258,439
+Collapsed=0
+
+[Table][0x6E039595,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1F96DC68,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x9D64C776,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x43BF1E3F,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x29722B16,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x1A8D85F3,4]
+RefScale=13
+Column 0  Sort=0v
+
+[Table][0x8FA880CB,4]
+RefScale=13
+Column 0  Sort=0v
 
