--- a/build2/imgui.ini
+++ b/build2/imgui.ini
@@ -13,6 +13,11 @@ Pos=-2,89
 Size=1258,439
 Collapsed=0
 
+[Window][Options & Info]
+Pos=-17,620
+Size=339,205
+Collapsed=0
+
 [Table][0x6E039595,4]
 RefScale=13
 Column 0  Sort=0v
@@ -39,5 +44,17 @@ Column 0  Sort=0v
 
 [Table][0x8FA880CB,4]
 RefScale=13
+Column 0  Sort=0v
+
+[Table][0xBD94B7EE,4]
+RefScale=19.5
+Column 0  Sort=0v
+
+[Table][0x3017EDE4,4]
+RefScale=19.5
+Column 0  Sort=0v
+
+[Table][0xD2D2E00D,4]
+RefScale=19.5
 Column 0  Sort=0v
 
