--- a/.gitignore
+++ b/.gitignore
@@ -23,8 +23,7 @@ build
 .LSOverride
 
 # Icon must end with two \r
-Icon
-
+Icon
 
 # Thumbnails
 ._*
@@ -190,6 +189,7 @@ install_manifest.txt
 *.slo
 *.lo
 *.o
+*.obj
 
 # Precompiled Headers
 *.gch
@@ -276,6 +276,7 @@ artifacts/
 *_i.h
 *.ilk
 *.meta
+*.obj
 *.pch
 *.pdb
 *.pgc
